<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="CONTINUE">CONTINUE</string>

    <!-- HISTORY -->
    <string name="morph_exchange">Swap</string>
    <string name="debug_morph_exchange_homebrew" translatable="false">Debug Homebrew</string>
    <string name="morph_loading_orders">Loading order history</string>
    <string name="morph_loading_orders_failed">Loading orders failed</string>
    <string name="morph_order_history">Order history</string>
    <string name="morph_incoming">Incoming</string>
    <string name="morph_select_state_residency">Select your state of residency</string>
    <string name="morph_select_state">Select state</string>
    <string name="morph_unavailable_in_state">This service is not yet available in your state.</string>
    <string name="morph_deposit_from">Deposit from ShapeShift</string>
    <string name="morph_deposit_to">Deposited to ShapeShift</string>

    <!-- NEW TRADE -->
    <string name="morph_use_minimum">Use minimum</string>
    <string name="morph_use_maximum">Use maximum</string>
    <string name="morph_arrow_unicode" translatable="false">→</string>
    <string name="morph_getting_information">Loading information from ShapeShift, please wait…</string>
    <string name="morph_getting_information_failed">Loading ShapeShift information failed</string>
    <string name="morph_btc">Bitcoin</string>
    <string name="morph_eth">Ether</string>
    <string name="morph_bch">Bitcoin Cash</string>
    <string name="morph_switch_currency_description">Invert currency pair</string>
    <string name="morph_getting_fees_failed">Error fetching fees</string>
    <string name="morph_fetching_unspent_outputs_failed">Error fetching unspent outputs</string>
    <string name="morph_fetching_eth_account_failed">Error fetching remaining Ether</string>
    <string name="morph_deriving_address_failed">Error deriving address</string>
    <string name="morph_new_exchange">New Swap</string>
    <string name="morph_no_funds_title">No funds to Swap</string>
    <string name="morph_no_funds_message">You currently don\'t have enough of a balance to Swap. Get started by requesting some funds to your wallet.</string>

    <!-- CONFIRMATION -->
    <string name="morph_confirmation_agree">Agree to ShapeShift&#160;</string>
    <string name="morph_confirmation_terms">terms and conditions</string>
    <string name="morph_network_fee">Network Transaction Fee</string>
    <string name="morph_transaction_fee">Transaction Fee</string>
    <string name="morph_exchange_rate">Exchange Rate</string>
    <string name="morph_time_remaining">Quote expires in %1$s</string>
    <string name="morph_deposit_title">%1$s to deposit</string>
    <string name="morph_receive_title">%1$s to be received</string>
    <string name="morph_total_title">Total %1$s spent</string>
    <string name="morph_exchange_rate_formatted">1 %1$s = %2$s %3$s</string>
    <string name="morph_exchange_rate_placeholder">%1$s -> %2$s</string>
    <string name="morph_quote_expired_error">Quote expired</string>
    <string name="morph_quote_expired_error_message">This trade has expired as we have still not received your funds. If we receive your funds we will complete your trade. If you require further assistance please contact support.</string>
    <string name="morph_amount_to_low">%1$s %2$s required to Swap</string>
    <string name="morph_confirmation_eth_pending">Ether transaction failed, please wait until your previous transaction confirms.</string>

    <!-- IN PROGRESS -->
    <string name="morph_in_progress_explanation">Thanks for placing your trade! Swap trades can take up to two hours, and you can keep track of your trade\'s progress in the Order History section.</string>
    <string name="morph_failed_explanation">This trade has failed. Please return to the Swap tab to start a new trade</string>
    <string name="morph_refunded_explanation">This trade has expired as we have still not received your funds. If we receive your funds we will complete your trade. If you require further assistance please contact support.</string>
    <string name="morph_sending_title">Sending Funds</string>
    <string name="morph_in_progress_title">In Progress</string>
    <string name="morph_complete_title">Complete</string>
    <string name="morph_failed_title">Failed</string>
    <string name="morph_refunded_title">Expired</string>
    <string name="morph_step_number">Step %1$s of 3</string>
    <string name="morph_send_now">Send Now</string>

    <!-- ORDER DETAIL -->
    <string name="morph_order_id_title">Order ID</string>
    <string name="morph_trade_not_found">Trade not found</string>
    <string name="morph_in_progress_summary">Swap in Progress</string>
    <string name="morph_failed_summary">Swap Failed</string>
    <string name="morph_refunded_summary">Swap Expired</string>
    <string name="locked_disclaimer_message">The amounts you send and receive may change slightly due to market activity. Once an order starts, we are unable to stop it</string>
    <string name="send_to">Send To</string>
    <string name="receive">Receive</string>
    <string name="fees">Fees</string>
    <string name="value">Value</string>
    <string name="status">Status</string>
    <string name="order_id">Order ID</string>
    <string name="order_detail">Order Detail</string>
    <string name="make_a_new_exchange">Start a new Swap</string>
    <string name="order_history">Order History</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="done">Done</string>
    <string name="confirm_exchange">Confirm Swap</string>
    <string name="exchange_locked">Swap Locked</string>
    <string name="status_inprogress_detail">Thanks for placing your trade! Funds will usually reach your wallet within 2 hours and we’ll send you a notification when that happens. Keep track of your trade’s progress in the Order History area.</string>
    <string name="status_failed_detail">This trade has failed. Please return to the Swap tab to start a new trade.</string>
    <string name="status_refund_in_progress_detail">This trade has expired as we have still not received your funds. If we receive your funds we will complete your trade. If you require further assistance please contact support.</string>
    <string name="status_refunded_detail">Swap Locked</string>
    <string name="status_expired_detail">This trade has expired as we have still not received your funds. If we receive your funds we will complete your trade. If you require further assistance please contact support.</string>
    <string name="status_request_refund">Contact Support</string>

    <!-- ORDER STATUS -->
    <string name="morph_status_in_progress">In progress</string>
    <string name="morph_status_complete">Complete</string>
    <string name="morph_status_expired">Expired</string>
    <string name="morph_status_failed">Failed</string>
    <string name="morph_status_refunded">Refunded</string>
    <string name="morph_status_refund_in_progress">Refund in Progress</string>
    <string name="morph_status_refund_unknown">Unknown</string>
    <string name="morph_status_refund_received">Received</string>
    <string name="morph_status_refund_resolved">Resolved</string>

    <!-- EXECUTION -->
    <string name="execution_error_title">Error executing trade</string>
    <string name="execution_error_message">There was an error executing your trade. Please try again, or contact support if the issue persists.</string>

    <!-- HOMEBREW CONFIRMATION -->
    <string name="homebrew_confirmation_error_fetching_fee">Error fetching fee</string>

    <!-- Limit -->
    <string name="under_limit">Under limit</string>
    <string name="over_limit">Over limit</string>

    <!-- Help -->
    <string name="morph_help_dialog_need_some_help">@string/need_some_help</string>
    <string name="morph_help_dialog_need_some_help_body">Our Blockchain Support Team is standing by to answer any questions you have.</string>
    <string name="morph_help_dialog_view_swap_limit">View My Swap Limit</string>
    <string name="morph_help_dialog_contact_support">@string/contact_support</string>
    <string name="morph_help_dialog_contact_support_url">https://blockchain.zendesk.com/hc/en-us/requests/new?ticket_form_id=360000180551</string>

</resources>
