<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".homebrew.exchange.ExchangeHistoryActivity">

    <include
        android:id="@+id/toolbar_constraint"
        layout="@layout/toolbar_constraint"
        android:fitsSystemWindows="true" />

    <Button
        android:id="@+id/button_new_exchange"
        style="@style/ExchangeButton.Exchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FF10ADE4"
        android:text="@string/make_a_new_exchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_constraint"
        tools:text="Make a New Exchange" />

    <TextView
        android:id="@+id/order_history_title_textView"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="17dp"
        android:background="#FFF6F7F9"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/order_history"
        android:textColor="@color/exchange_text_dark_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_exchange"
        tools:text="Order History" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#FFDDDDDD"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_exchange" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#FFDDDDDD"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_history_title_textView" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/teamMembersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/emptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_orders_found"
            android:visibility="invisible"
            tools:visibility="visible"
            tools:text="No Orders Found"/>

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>



</android.support.constraint.ConstraintLayout>