<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/exchange_confirmation_blue_bg">

    <Button
        android:id="@+id/select_from_account_button"
        style="@style/ExchangeButton.SendReceive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:textAllCaps="false"
        android:textColor="@color/exchange_button_color"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:background="@color/color_bitcoin_logo"
        tools:text="0.25 BTC" />

    <Button
        android:id="@+id/select_to_account_button"
        style="@style/ExchangeButton.SendReceive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:textAllCaps="false"
        android:textColor="@color/exchange_button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView_min_balance_body"
        tools:background="@color/color_ether_logo"
        tools:text="5.67 ETH" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="select_to_account_button, select_from_account_button" />

    <TextView
        android:id="@+id/textView"
        style="@style/ExchangeText.ExchangeReceiveHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/receive"
        app:layout_constraintStart_toStartOf="@+id/select_to_account_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/ExchangeText.ExchangeReceiveHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/exchange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_send_now"
        style="@style/ExchangeButton.Exchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/morph_send_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Value -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/value_title_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/value_title_textView" />

    <TextView
        android:id="@+id/value_title_textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/exchange_row_height"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:textColor="@color/exchange_text_gray_color"
        android:textSize="16sp"
        android:text="@string/value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <TextView
        android:id="@+id/value_textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/exchange_row_height"
        android:layout_gravity="end"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical|end"
        android:padding="16dp"
        android:textColor="@color/exchange_text_dark_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/value_title_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value_title_textView"
        app:layout_constraintTop_toTopOf="@+id/value_title_textView"
        tools:text="$1,642.50" />

    <!-- Fees -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/fees_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fees_textView" />

    <TextView
        android:id="@+id/fees_title_textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/exchange_row_height"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:textColor="@color/exchange_text_gray_color"
        android:textSize="16sp"
        android:text="@string/fees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_title_textView" />

    <TextView
        android:id="@+id/fees_textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/exchange_row_height"
        android:layout_gravity="end"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical|end"
        android:padding="16dp"
        android:textColor="@color/exchange_text_dark_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/fees_title_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fees_title_textView"
        app:layout_constraintTop_toTopOf="@+id/fees_title_textView"
        tools:text="0.000414 BTC" />

    <!-- Receive -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/receive_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/receive_textView" />

    <TextView
        android:id="@+id/receive_title_textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/exchange_row_height"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:textColor="@color/exchange_text_dark_color"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/receive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fees_title_textView" />

    <TextView
        android:id="@+id/receive_textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/exchange_row_height"
        android:layout_gravity="end"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical|end"
        android:padding="16dp"
        android:textColor="@color/exchange_text_dark_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/receive_title_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/receive_title_textView"
        app:layout_constraintTop_toTopOf="@+id/receive_title_textView"
        tools:text="5.668586 ETH" />

    <!-- Send -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/send_to_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/send_to_textView" />

    <TextView
        android:id="@+id/send_to_title_textView"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:textColor="@color/exchange_text_gray_color"
        android:textSize="16sp"
        android:text="@string/send_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receive_title_textView" />

    <TextView
        android:id="@+id/send_to_textView"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_gravity="end"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical|end"
        android:padding="16dp"
        android:textColor="@color/exchange_text_dark_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/send_to_title_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/send_to_title_textView"
        app:layout_constraintTop_toTopOf="@+id/send_to_title_textView"
        tools:text="My Wallet" />

    <TextView
        android:id="@+id/confirm_disclaimer_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/locked_disclaimer_message"
        android:textAlignment="center"
        android:textColor="@color/exchange_text_gray_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_to_title_textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/select_from_account_button"
        app:layout_constraintEnd_toStartOf="@+id/select_to_account_button"
        app:layout_constraintStart_toEndOf="@+id/select_from_account_button"
        app:layout_constraintTop_toTopOf="@+id/select_from_account_button"
        app:srcCompat="@drawable/ic_arrow_forward_exchange_blue_24dp"
        tools:ignore="ContentDescription,VectorDrawableCompat" />

</android.support.constraint.ConstraintLayout>